--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ debug-assertions = false
 notify = "5.0.0"
 clap = { version = "4.0.29", features = ["cargo"] }
 tokio = { version = "1.23", features = ["sync", "rt", "macros", "rt-multi-thread", "time"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
